--- a/recipes/pizza.css
+++ b/recipes/pizza.css
@@ -3,6 +3,11 @@ body {
     font-family: "Courier New", monospace;
 }
 
+img {
+    height: auto;
+    width: 600px;
+}
+
 h1, h2 {
     text-align: center;
     color: white;
