Add style.css to all html files for consiceness

--- a/style.css
+++ b/style.css
@@ -13,3 +13,11 @@ ul {
     text-align: center;
     font-size: 24px;
 }
+
+.large-font {
+    font-size: large;
+}
+
+.left-side {
+    text-align: left;
+}
