Add new styles to the main list in index.html
Add margin and border to list items so that they look neater.

--- a/style.css
+++ b/style.css
@@ -25,3 +25,15 @@ ul {
 .left-side {
     text-align: left;
 }
+
+.homepage-item {
+    margin: 38px auto;
+    border: 3px solid rgb(216, 17, 17);
+    width: 200px;
+    background-color: orange;
+    color: white;
+}
+
+.main-list {
+    margin: 140px auto;
+}
